fix(kit): `Textarea` fix scroll on ios (#14569)

--- a/projects/kit/components/textarea/textarea.style.less
+++ b/projects/kit/components/textarea/textarea.style.less
@@ -11,6 +11,7 @@ tui-textarea-content:where(*&) {
     padding-inline-start: var(--t-start);
     padding-inline-end: calc(var(--t-end) + var(--t-side) + var(--t-space));
     overflow: auto;
+    pointer-events: none;
 
     tui-textfield._with-label[data-size='m'] & {
         margin-block-start: calc(-1.25 * var(--tui-font-offset) - 1.375rem);
